<resources>
    <string name="app_name">StressLess_Android2.0</string>
    <string name="stress_less">Stress Less</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="not_a_member">not a member?</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">email</string>
    <string name="re_type_password">re-type password</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>

    <string-array name="spinner_collection_values">
        <item>
            Animations
        </item>
        <item>
            Sounds
        </item>
    </string-array>
    <string-array name="animations">
        <item>
            Alienrain
        </item>
        <item>
            Circles
        </item>
        <item>
            Hellsmatrix
        </item>
        <item>
            Stars
        </item>
        <item>
            Pulsatingblocks
        </item>
    </string-array>

    <string-array name="sounds">
        <item>
            Brainwave
        </item>
        <item>
            Raindrop
        </item>
        <item>
            Seagull
        </item>
        <item>
            Rainforest
        </item>
        <item>
            Windchimes
        </item>
    </string-array>

    <string name="title_activity_main4">Main4Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home_image_view">home image view</string>
    <string name="sounds">Sounds</string>
    <string name="animations">Animations</string>
    <string name="item_image_view">item image view</string>
    <string name="media_title_template">Media Title</string>
    <string name="speak">speak</string>
    <string name="audio_player_button">audio player button...</string>
    <string name="audio_player_album_cover">audio player album cover</string>
    <string name="title_name">Title Name</string>
    <string name="video_player_button">video_player_button</string>
    <string name="delete">Delete</string>
    <string name="play_featured_media">Play featured media</string>
    <string name="long_press_an_item_to_remove_it_from_favorites">Long press an item to remove it from favorites</string>


</resources>
