<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fullsail.b_nicole.stressless_android20.Main2Activity"
    android:background="@color/mainBackground">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="40sp"
        android:textAlignment="center"
        android:fontFamily="casual"
        android:id="@+id/sign_up"
        android:textColor="@color/textColor"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_below="@id/sign_up"
        android:inputType="textEmailAddress"
        android:layout_margin="20dp"
        android:id="@+id/email_sigh_up"
        android:textColorHint="@color/textColor"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_sigh_up"
        android:layout_margin="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:id="@+id/password_sign_up"
        android:textColorHint="@color/textColor"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:layout_below="@id/password_sign_up"
        android:layout_margin="20dp"
        android:hint="@string/re_type_password"
        android:inputType="textPassword"
        android:id="@+id/retype_password"
        android:textColorHint="@color/textColor"/>


</android.widget.RelativeLayout>
