<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/mainBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fullsail.b_nicole.stressless_android20.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stress_less"
        android:textAlignment="center"
        android:paddingTop="20dp"
        android:textSize="40sp"
        android:fontFamily="casual"
        android:textColor="@color/textColor"
        android:id="@+id/title_name"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_name"
        android:hint="@string/email"
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:layout_margin="20dp"
        android:textColorHint="@color/textColor"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_margin="20dp"
        android:id="@+id/password"
        android:textColorHint="@color/textColor"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:text="@string/not_a_member"
        android:background="@android:color/transparent"
        android:textColor="@color/colorAccent"
        android:id="@+id/notAMember"
        />

</android.widget.RelativeLayout>
