<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fullsail.b_nicole.stressless_android20.AudioPlayerActivity"
    android:background="@color/mainBackground">

    <TextView
        android:textAlignment="center"
        android:textSize="36sp"
        android:id="@+id/audio_player_text"
        android:text="@string/title_name"
        android:layout_margin="16dp"
        android:layout_above="@+id/audio_player_album_cover"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textColor="@color/textColor"/>

    <ImageView
        android:layout_centerInParent="true"
        android:contentDescription="@string/audio_player_album_cover"
        android:src="@drawable/alienrain"
        android:id="@+id/audio_player_album_cover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageButton
        android:layout_margin="16dp"
        android:layout_below="@+id/audio_player_album_cover"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/audio_player_button"
        android:id="@+id/audio_player_play"
        android:src="@drawable/ic_play_arrow_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageButton
        android:layout_margin="16dp"
        android:layout_below="@+id/audio_player_album_cover"
        android:layout_toStartOf="@+id/audio_player_play"
        android:contentDescription="@string/audio_player_button"
        android:id="@+id/audio_player_stop"
        android:src="@drawable/ic_stop_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageButton
        android:layout_margin="16dp"
        android:layout_below="@+id/audio_player_album_cover"
        android:layout_toEndOf="@+id/audio_player_play"
        android:contentDescription="@string/audio_player_button"
        android:id="@+id/audio_player_pause"
        android:src="@drawable/ic_pause_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
